--- a/UIStudentAppProject/ViewStudent/viewstudent.css
+++ b/UIStudentAppProject/ViewStudent/viewstudent.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   padding: 0;
   background-image: url("../Image/photo-1671223366996-1b0bbdb28d88.avif");
-  /* background-attachment: fixed; */
+  background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
